[package]
name = "zk_evm"
version = "1.3.2"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]

resolver = "2"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
num = { version = "0.4"}
static_assertions = "1"
zkevm_opcode_defs = { git = "https://github.com/matter-labs/era-zkevm_opcode_defs.git", branch = "v1.3.2" }
# zkevm_opcode_defs = {path = "../zkevm_opcode_defs"}
lazy_static = "1.4"

[dev-dependencies]
hex = "0.4"

[features]
