[package]
name = "zk_evm"
version = "1.4.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]

resolver = "2"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
num = { version = "0.4"}
static_assertions = "1"
zkevm_opcode_defs = { git = "https://github.com/matter-labs/era-zkevm_opcode_defs.git", branch = "v1.3.2" }
zk_evm_abstractions = { git = "https://github.com/matter-labs/era-zk_evm_abstractions.git" }
lazy_static = "1.4"

[dev-dependencies]
hex = "0.4"

[features]
